[gd_scene load_steps=38 format=3 uid="uid://ifsdtp307ptu"]

[ext_resource type="Theme" uid="uid://brkyelj36ne10" path="res://Scripts/maintheme.tres" id="1_52tlx"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="2_1h2br"]
[ext_resource type="Texture2D" uid="uid://c0nqv6vii1nss" path="res://assets/Images/CardFronts/cards1-5.png" id="3_ow6xv"]
[ext_resource type="PackedScene" uid="uid://cvgijvugy7wxe" path="res://assets/button_scene.tscn" id="4_pd6m8"]
[ext_resource type="Texture2D" uid="uid://dcltp31ptq1ky" path="res://assets/Images/Buttons/pauseButtonLarge.svg" id="5_mfxsg"]
[ext_resource type="Script" path="res://Scripts/pauseButton.gd" id="6_tm85r"]
[ext_resource type="Texture2D" uid="uid://c52wtn1j2dqrg" path="res://assets/Images/CardFronts/cards3-11.png" id="7_d5qrn"]
[ext_resource type="Texture2D" uid="uid://bd3eeolp5h22g" path="res://assets/Images/rectangleborderyellow.svg" id="8_uppyh"]
[ext_resource type="Texture2D" uid="uid://dsyec6g04gdst" path="res://assets/Images/Buttons/buttonhighlights.svg" id="8_vr5v7"]
[ext_resource type="Texture2D" uid="uid://bfv4r7hwpte2q" path="res://assets/Images/buttonpattern2.png" id="9_ebtit"]
[ext_resource type="Texture2D" uid="uid://dtbej557ikw1a" path="res://assets/Images/boxshadow.svg" id="9_imb1g"]
[ext_resource type="Texture2D" uid="uid://dpqbxplhq7uc" path="res://assets/Images/bigArea.png" id="12_eyvsg"]
[ext_resource type="AudioStream" uid="uid://b3qcrwqx5wa2o" path="res://assets/audio/soundEffects/cardSelect.mp3" id="13_g632e"]
[ext_resource type="AudioStream" uid="uid://cyjqqbvopbnij" path="res://assets/audio/music/style3early.mp3" id="14_bm65c"]
[ext_resource type="AudioStream" uid="uid://xuwabra0hj7v" path="res://assets/audio/music/style2early.mp3" id="14_ipglr"]
[ext_resource type="AudioStream" uid="uid://bri333s8a41w0" path="res://assets/audio/music/style1early.mp3" id="14_ntan3"]
[ext_resource type="AudioStream" uid="uid://br5kn206tvp1v" path="res://assets/audio/music/style1halfway.mp3" id="15_3vyif"]
[ext_resource type="AudioStream" uid="uid://d2lhfbnhnx0ch" path="res://assets/audio/music/style3halfway.mp3" id="15_7qh6r"]
[ext_resource type="AudioStream" uid="uid://c0btii8jb5qp8" path="res://assets/audio/music/style2halfway.mp3" id="15_j1mpi"]
[ext_resource type="AudioStream" uid="uid://bsnlwp4ukyvm1" path="res://assets/audio/music/style2late.mp3" id="16_a3npp"]
[ext_resource type="AudioStream" uid="uid://c2iynt4n4y26r" path="res://assets/audio/music/style3late.mp3" id="16_cb4a0"]
[ext_resource type="AudioStream" uid="uid://cwrwj4skc1gjx" path="res://assets/audio/music/style1late.mp3" id="16_xuxow"]
[ext_resource type="AudioStream" uid="uid://5tkkcrerhiqt" path="res://assets/audio/music/style2super.mp3" id="17_3ama7"]
[ext_resource type="AudioStream" uid="uid://dymhayhmajtni" path="res://assets/audio/music/style3super.mp3" id="17_5ixo8"]
[ext_resource type="AudioStream" uid="uid://cgiboaw0cfjlq" path="res://assets/audio/music/style1super.mp3" id="17_gx2mp"]
[ext_resource type="AudioStream" uid="uid://2l17ipuweios" path="res://assets/audio/music/style4early.mp3" id="26_kw7pg"]
[ext_resource type="AudioStream" uid="uid://dqcxblp8vcvtl" path="res://assets/audio/music/style4halfway.mp3" id="27_x15vg"]
[ext_resource type="AudioStream" uid="uid://bdirgs3gawlo0" path="res://assets/audio/music/style4late.mp3" id="28_mkxyj"]
[ext_resource type="AudioStream" uid="uid://3sm8jjdhx22b" path="res://assets/audio/music/style4super.mp3" id="29_04tbd"]

[sub_resource type="Animation" id="Animation_lbo3g"]
resource_name = "make_card_disappear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.7, 1.5),
"transitions": PackedFloat32Array(0.297303, 0.406126, 6.27667),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.87451), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2octr"]
resource_name = "victory_screen_appear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o60hx"]
_data = {
"make_card_disappear": SubResource("Animation_lbo3g"),
"victory_screen_appear": SubResource("Animation_2octr")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_027q3"]
streams_count = 1
random_pitch = 2.06
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("13_g632e")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_of1n8"]
streams_count = 4
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("14_ntan3")
stream_0/weight = 1.0
stream_1/stream = ExtResource("15_3vyif")
stream_1/weight = 1.0
stream_2/stream = ExtResource("16_xuxow")
stream_2/weight = 1.0
stream_3/stream = ExtResource("17_gx2mp")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nqfh7"]
streams_count = 4
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("14_ipglr")
stream_0/weight = 1.0
stream_1/stream = ExtResource("15_j1mpi")
stream_1/weight = 1.0
stream_2/stream = ExtResource("16_a3npp")
stream_2/weight = 1.0
stream_3/stream = ExtResource("17_3ama7")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_iodiv"]
streams_count = 4
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("14_bm65c")
stream_0/weight = 1.0
stream_1/stream = ExtResource("15_7qh6r")
stream_1/weight = 1.0
stream_2/stream = ExtResource("16_cb4a0")
stream_2/weight = 1.0
stream_3/stream = ExtResource("17_5ixo8")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_o26kn"]
streams_count = 4
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("26_kw7pg")
stream_0/weight = 1.0
stream_1/stream = ExtResource("27_x15vg")
stream_1/weight = 1.0
stream_2/stream = ExtResource("28_mkxyj")
stream_2/weight = 1.0
stream_3/stream = ExtResource("29_04tbd")
stream_3/weight = 1.0

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_52tlx")
script = ExtResource("2_1h2br")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="gridMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0976563
anchor_right = 1.0
anchor_bottom = 0.921875
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 25
metadata/_edit_use_anchors_ = true

[node name="grid" type="FlowContainer" parent="gridMargin"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="drawnCard" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.470998)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -189.0
offset_right = -46.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
mouse_filter = 2
texture = ExtResource("3_ow6xv")
stretch_mode = 5

[node name="cardAnimator" type="AnimationPlayer" parent="drawnCard"]
libraries = {
"": SubResource("AnimationLibrary_o60hx")
}

[node name="gameHeader" parent="." instance=ExtResource("4_pd6m8")]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 10
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 2.0
grow_vertical = 1

[node name="TopGui" type="MarginContainer" parent="gameHeader"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_52tlx")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HSplitContainer" type="HSplitContainer" parent="gameHeader/TopGui"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 50
split_offset = -55
dragger_visibility = 1

[node name="pauseButton" type="TextureButton" parent="gameHeader/TopGui/HSplitContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("5_mfxsg")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_tm85r")

[node name="HBoxContainer" type="HBoxContainer" parent="gameHeader/TopGui/HSplitContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="turnPlayerFavoriteCard" type="TextureRect" parent="gameHeader/TopGui/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(65, 80)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("7_d5qrn")
expand_mode = 1
stretch_mode = 5

[node name="CurrentPlayerName" type="Label" parent="gameHeader/TopGui/HSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Player 1's Turn"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_52tlx")

[node name="ButtonSceneFooter" parent="." instance=ExtResource("4_pd6m8")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.922
offset_top = 97.84

[node name="BottomGui" type="MarginContainer" parent="ButtonSceneFooter"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_52tlx")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="ButtonSceneFooter/BottomGui"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0
scroll_deadzone = 4

[node name="currentPlayerCards" type="HBoxContainer" parent="ButtonSceneFooter/BottomGui/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 121.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.411765, 0.0392157, 0.501961)

[node name="ReturnToGame" parent="SettingsMenu" instance=ExtResource("4_pd6m8")]
custom_minimum_size = Vector2(0, 102)
layout_mode = 1

[node name="Label2" type="Label" parent="SettingsMenu/ReturnToGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Return To Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Control" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerScores" type="ScrollContainer" parent="SettingsMenu/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0277778
anchor_right = 0.947222
anchor_bottom = 0.899827
offset_bottom = -0.226074
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Players" type="VBoxContainer" parent="SettingsMenu/Settings/PlayerScores"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 100

[node name="Settings2" parent="SettingsMenu/Settings" instance=ExtResource("4_pd6m8")]
layout_mode = 1

[node name="Label2" type="Label" parent="SettingsMenu/Settings/Settings2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = -37.5
offset_right = 99.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryScreen" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="TextureRect" type="TextureRect" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_uppyh")

[node name="RestartGame" parent="VictoryScreen" instance=ExtResource("4_pd6m8")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00138889
anchor_top = 0.778406
anchor_bottom = 0.857031
offset_top = 0.639771
offset_right = -0.999207
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="Label" parent="VictoryScreen/RestartGame" index="3"]
text = "Restart Game"

[node name="Winner" type="Button" parent="VictoryScreen"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00138889
anchor_top = 0.025
anchor_right = 0.999
anchor_bottom = 0.152
offset_right = -0.279968
offset_bottom = 0.440628
theme = ExtResource("1_52tlx")
theme_override_font_sizes/font_size = 80
text = "Player 1 Wins!"
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Texturedtexture" type="TextureRect" parent="VictoryScreen/Winner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ebtit")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="VictoryScreen/Winner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_vr5v7")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VictoryScreen/Winner"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_imb1g")
expand_mode = 1

[node name="Label" type="Label" parent="VictoryScreen/Winner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryPopup" type="Button" parent="VictoryScreen"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00138889
anchor_top = 0.174594
anchor_right = 0.998999
anchor_bottom = 0.751562
offset_top = 0.52002
offset_right = -0.279236
theme = ExtResource("1_52tlx")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="VictoryScreen/VictoryPopup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = 2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_eyvsg")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="VictoryScreen/VictoryPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -6.10352e-05
offset_bottom = -0.999939
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_vr5v7")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VictoryScreen/VictoryPopup"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_imb1g")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryScreen/VictoryPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="MarginContainer" type="MarginContainer" parent="VictoryScreen/VictoryPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = -20

[node name="Label" type="Label" parent="VictoryScreen/VictoryPopup/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Victory By:"
horizontal_alignment = 1

[node name="VictoryType" type="Label" parent="VictoryScreen/VictoryPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FlowContainer" type="FlowContainer" parent="VictoryScreen/VictoryPopup/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerCards" type="HBoxContainer" parent="VictoryScreen/VictoryPopup/VBoxContainer/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Control" type="Control" parent="VictoryScreen/VictoryPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VictoryScreen/VictoryPopup/VBoxContainer"]
layout_mode = 2
text = "Matches: 232"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VictoryScreen/VictoryPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 75
theme_override_constants/margin_right = 75

[node name="playerScores" type="ScrollContainer" parent="VictoryScreen/VictoryPopup/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryScreen/VictoryPopup/VBoxContainer/MarginContainer2/playerScores"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VictoryScreen/VictoryPopup/VBoxContainer/MarginContainer2/playerScores/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Eggma : 2 Wins"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VictoryScreen/VictoryPopup/VBoxContainer/MarginContainer2/playerScores/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Player 1 : 2 Wins"
horizontal_alignment = 1

[node name="ReturnToMainMenu" type="Button" parent="VictoryScreen"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 0.978125
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_52tlx")
text = "Return To Main Menu"
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Texturedtexture" type="TextureRect" parent="VictoryScreen/ReturnToMainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ebtit")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="VictoryScreen/ReturnToMainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_vr5v7")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VictoryScreen/ReturnToMainMenu"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_imb1g")
expand_mode = 1

[node name="Label" type="Label" parent="VictoryScreen/ReturnToMainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Return To Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="victoryAnimator" type="AnimationPlayer" parent="VictoryScreen"]
libraries = {
"": SubResource("AnimationLibrary_o60hx")
}

[node name="GameSoundsSpecifically" type="Node" parent="."]

[node name="cardSelection" type="AudioStreamPlayer" parent="GameSoundsSpecifically"]
stream = SubResource("AudioStreamRandomizer_027q3")
volume_db = 4.095
pitch_scale = 0.59
max_polyphony = 3

[node name="SongSet1" type="AudioStreamPlayer" parent="GameSoundsSpecifically"]
stream = SubResource("AudioStreamRandomizer_of1n8")
volume_db = -7.0

[node name="SongSet2" type="AudioStreamPlayer" parent="GameSoundsSpecifically"]
stream = SubResource("AudioStreamRandomizer_nqfh7")
volume_db = -9.0

[node name="SongSet3" type="AudioStreamPlayer" parent="GameSoundsSpecifically"]
stream = SubResource("AudioStreamRandomizer_iodiv")
volume_db = -8.0

[node name="SongSet4" type="AudioStreamPlayer" parent="GameSoundsSpecifically"]
stream = SubResource("AudioStreamRandomizer_o26kn")
volume_db = -8.0

[connection signal="pressed" from="ButtonSceneFooter" to="." method="_on_button_scene_footer_pressed"]
[connection signal="pressed" from="SettingsMenu/ReturnToGame" to="gameHeader/TopGui/HSplitContainer/pauseButton" method="_on_return_to_game_pressed"]
[connection signal="pressed" from="VictoryScreen/RestartGame" to="." method="_on_restart_game_pressed"]
[connection signal="pressed" from="VictoryScreen/ReturnToMainMenu" to="." method="_on_return_to_main_menu_pressed"]

[editable path="VictoryScreen/RestartGame"]
